[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
derive_builder = "0.20.2"
futures = "0.3"
polars = { version = "0.27", features = ["parquet", "lazy", "temporal"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
zstd = "0.11.2+zstd.1.5.2"

[dev-dependencies]
